--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,7 +2,11 @@ experiment:
   model: trend
   steps_ahead: 10
   frequency: D
-  data_loc: 'data/dev/input_temperature.csv'
+
+data:
+  loc: 'data/dev/input_temperature.csv'
   value_col: temperature
   date_col: time
+
+app:
   plot: TRUE
