--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,12 +1,2 @@
-experiment:
-  model: trend
-  steps_ahead: 10
-  frequency: D
-
-data:
-  loc: 'data/dev/input_temperature.csv'
-  value_col: temperature
-  date_col: time
-
-app:
-  plot: TRUE
+defaults:
+  - development: config
